--- a/App Development/app_dev/pubspec.yaml
+++ b/App Development/app_dev/pubspec.yaml
@@ -28,10 +28,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   tflite: ^1.1.1
-  image_picker: ^0.6.7+11
-  font_awesome_flutter: ^8.8.1
-  image: ^2.1.4
+  image_picker: ^0.6.7+12
+  font_awesome_flutter: ^8.10.0
+  image_cropper: ^1.3.1
+  image: 
   cupertino_icons: ^0.1.3
+  flutter_spinkit: ^4.1.2+1
+  tesseract_ocr: ^0.3.0
+
 
 dev_dependencies:
   flutter_test:
@@ -50,14 +54,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/img/image_login.png
-    - assets/tflite/ssd_mobilenet.tflite
-    - assets/tflite/ssd_mobilenet.txt
-    - assets/img/robot.jpg
-    - assets/img/anil.jpeg
-    - assets/img/Ashish.jpg
-    - assets/img/bishwash.jpeg
-    - assets/img/amit.jpeg
+    - assets/tflite/
+    - assets/img/
+    - assets/
+    - assets/tessdata/
    
 
   #   - images/a_dot_ham.jpeg
